basic-authn.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "jwt-auth"
spec:
  host: java.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
