kiali-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kiali
  labels:
    app: kiali
    version: v0.6
spec:
  backend:
    serviceName: kiali
    servicePort: 20001
