mesh-mutual-tls.yaml
#################################################################################
# Activate mesh wide mutual TLS (client side)
#################################################################################
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "default"
  namespace: "default"
spec:
  host: "*.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
#################################################################################
# Deactivate client side mutual TLS for Kubernetes API server
# - The API server doesn't have a sidecar
#################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: "api-server"
spec:
  host: "kubernetes.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
