mts-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mts-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mts
spec:
  hosts:
  - "*"
  gateways:
  - mts-gateway
  http:
  - match:
    - uri:
        prefix: /api
    rewrite:
      uri: /mythaistar
    route:
    - destination:
        host: java
        port:
          number: 8081
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: angular
        port:
          number: 80
