mts-virtualservice-ingress.yaml
#################################################################################
# Istio virtual service configuration for ingress gateway 
# - handles traffic coming from outside of the mesh
#################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mts-routes
spec:
  hosts:
  - mts.local
  - mts.local:31380
  - mts.local:31390
  gateways:
  - mts-gateway
  http:
  - match:
    - uri:
        prefix: /api/services/rest/dishmanagement/
    rewrite:
      uri: /
    route:
    - destination:
        host: mts-dishes
        port:
          number: 80
  - match:
    - uri:
        prefix: /api
    rewrite:
      uri: /mythaistar
    route:
    - destination:
        host: mts-booking-order
        port:
          number: 8081
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: mts-frontend
        port:
          number: 80
